@@ -1,7 +1,7 @@
 // qxgeditOptions.h
 //
 /****************************************************************************
-   Copyright (C) 2005-2014, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2005-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -62,6 +62,7 @@ public:
 	bool    bCompletePath;
 	int     iRandomizePerct;
 	int     iBaseFontSize;
+	QString sStyleTheme;
 
 	// View options...
 	bool    bMenubar;
