@@ -1,7 +1,7 @@
 // qxgeditOptionsForm.h
 //
 /****************************************************************************
-   Copyright (C) 2005-2010, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2005-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -50,6 +50,7 @@ protected slots:
 
 	void accept();
 	void reject();
+
 	void changed();
 
 	void midiInputsChanged();
