@@ -3,7 +3,7 @@
  <author>rncbc aka Rui Nuno Capela</author>
  <comment>qxgedit - Qt XG Editor.
 
-   Copyright (C) 2005-2014, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2005-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -183,7 +183,7 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="2" rowspan="6">
+          <item row="0" column="2" rowspan="7">
            <spacer>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -379,7 +379,44 @@
             </item>
            </widget>
           </item>
-          <item row="6" column="0" colspan="3">
+          <item row="6" column="0">
+           <widget class="QLabel" name="StyleThemeTextLabel">
+            <property name="font">
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="text">
+             <string>Custom &amp;style theme:</string>
+            </property>
+            <property name="buddy">
+             <cstring>StyleThemeComboBox</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="1">
+           <widget class="QComboBox" name="StyleThemeComboBox">
+            <property name="font">
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="toolTip">
+             <string>Custom widget style theme</string>
+            </property>
+            <property name="editable">
+             <bool>false</bool>
+            </property>
+            <item>
+             <property name="text">
+              <string>(default)</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="7" column="0" colspan="3">
            <spacer>
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -420,6 +457,7 @@
   <tabstop>MaxRecentFilesSpinBox</tabstop>
   <tabstop>RandomizePerctSpinBox</tabstop>
   <tabstop>BaseFontSizeComboBox</tabstop>
+  <tabstop>StyleThemeComboBox</tabstop>
   <tabstop>DialogButtonBox</tabstop>
  </tabstops>
  <resources>
